OWLCALCULATIONS/src/uk/ac/manchester/mae/ArithmeticsParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. ArithmeticsParser.java */
package uk.ac.manchester.mae;

import java.util.ArrayList;
import java.util.HashSet;
import java.util.List;
import java.util.Set;

import org.coode.manchesterowlsyntax.ManchesterOWLSyntaxEditorParser;
import org.protege.editor.owl.ui.clsdescriptioneditor.AutoCompleterMatcher;
import org.semanticweb.owl.apibinding.OWLManager;
import org.semanticweb.owl.expression.OWLEntityChecker;
import org.semanticweb.owl.expression.ParserException;
import org.semanticweb.owl.model.OWLDataFactory;
import org.semanticweb.owl.model.OWLDataProperty;
import org.semanticweb.owl.model.OWLObject;
import org.semanticweb.owl.model.OWLObjectProperty;

public class ArithmeticsParser/* @bgen(jjtree) */implements
		ArithmeticsParserTreeConstants, ArithmeticsParserConstants {/*
																	 * @bgen(jjtree
																	 * )
																	 */
	protected static JJTArithmeticsParserState jjtree = new JJTArithmeticsParserState();
	static private OWLEntityChecker owlEntityChecker = null;
	static private AutoCompleterMatcher matcher;
	static private OWLDataFactory dataFactory = OWLManager
			.createOWLOntologyManager().getOWLDataFactory();

	static public void setOWLDataFactory(OWLDataFactory dataFactory) {
		ArithmeticsParser.dataFactory = dataFactory;
	}

	static {
		initCompletions();
	}

	public static void setOWLEntityChecker(OWLEntityChecker oec) {
		owlEntityChecker = oec;
	}

	static public void setAutoCompleterMatcher(AutoCompleterMatcher matcher) {
		ArithmeticsParser.matcher = matcher;
	}

	// Unchecked on purpose as it must contain both OWLObject instances and
	// String
	private static List completions;

	public static List getCompletions() {
		return completions;
	}

	private static void initCompletions() {
		if (completions == null) {
			completions = new ArrayList();
		}
		completions.clear();
		completions.add("$");
		completions.add("APPLIESTO <");
		completions.add("STORETO <");
		completions.add("{");
	}

	private static void initCompletions(boolean conflictExpressed,
			boolean appliesToExpressed, boolean storeToExpressed,
			boolean bindingExpressed) {
		initCompletions();
		if (conflictExpressed) {
			completions.remove("$");
		}
		if (appliesToExpressed) {
			completions.remove("$");
			completions.remove("APPLIESTO <");
		}
		if (storeToExpressed) {
			completions.remove("$");
			completions.remove("APPLIESTO <");
			completions.remove("STORETO <");
		}
		if (bindingExpressed) {
			completions.remove("$");
			completions.remove("APPLIESTO <");
			completions.remove("STORETO <");
			completions.remove("{");
		}
	}

	public static void main(String args[]) {
		System.out.println("Reading from standard input...");
		System.out
				.print("Enter an expression like \u005c"1+(2+3)*var;\u005c" :");
		new ArithmeticsParser(System.in);
		try {
			SimpleNode n = ArithmeticsParser.Start();
			n.dump("");
			System.out.println("Thank you.");
		} catch (Exception e) {
			System.out.println("Oops.");
			System.out.println(e.getMessage());
		}
	}

	static final public SimpleNode Start() throws ParseException {
		/* @bgen(jjtree) Start */
		MAEStart jjtn000 = new MAEStart(JJTSTART);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Set<String> variables = new HashSet<String>();
		boolean conflictExpressed = false;
		boolean appliesToExpressed = false;
		boolean storeToExpressed = false;
		boolean bindingExpressed = false;
		try {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 25:
					ConflictStrategy();
					conflictExpressed = true;
					break;
				default:
					jj_la1[0] = jj_gen;
					;
			}
			initCompletions(conflictExpressed, appliesToExpressed,
					storeToExpressed, bindingExpressed);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 28:
					AppliesTo();
					appliesToExpressed = true;
					break;
				default:
					jj_la1[1] = jj_gen;
					;
			}
			initCompletions(conflictExpressed, appliesToExpressed,
					storeToExpressed, bindingExpressed);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 26:
					StoreTo();
					storeToExpressed = true;
					break;
				default:
					jj_la1[2] = jj_gen;
					;
			}
			initCompletions(conflictExpressed, appliesToExpressed,
					storeToExpressed, bindingExpressed);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case OPENCURLYBRACKET:
					jj_consume_token(OPENCURLYBRACKET);
					initCompletions(conflictExpressed, appliesToExpressed,
							storeToExpressed, bindingExpressed);
					Binding(variables);
					bindingExpressed = true;
					completions.addAll(variables);
					label_1: while (true) {
						switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
							case 23:
								;
								break;
							default:
								jj_la1[3] = jj_gen;
								break label_1;
						}
						jj_consume_token(23);
						Binding(variables);
						completions.addAll(variables);
					}
					jj_consume_token(BINDINGEND);
					break;
				default:
					jj_la1[4] = jj_gen;
					;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case INTEGER_LITERAL:
				case NUMBER:
				case IDENTIFIER:
				case 32:
					Expression(variables);
					break;
				case 35:
				case 36:
					Function(variables);
					break;
				default:
					jj_la1[5] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
			}
			jj_consume_token(24);
			jjtree.closeNodeScope(jjtn000, true);
			jjtc000 = false;
			{
				if (true)
					return jjtn000;
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
		throw new Error("Missing return statement in function");
	}

	static final public void ConflictStrategy() throws ParseException {
		/* @bgen(jjtree) ConflictStrategy */
		MAEConflictStrategy jjtn000 = new MAEConflictStrategy(
				JJTCONFLICTSTRATEGY);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t;
		try {
			jj_consume_token(25);
			completions.clear();
			completions.add("$OVERRIDING$");
			completions.add("$OVERRIDDEN$");
			completions.add("$EXCEPTION$");
			t = jj_consume_token(STRATEGY);
			jjtn000.setStrategyName(t.image);
			jj_consume_token(25);
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void StoreTo() throws ParseException {
		/* @bgen(jjtree) StoreTo */
		MAEStoreTo jjtn000 = new MAEStoreTo(JJTSTORETO);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			jj_consume_token(26);
			completions.clear();
			PropertyChain();
			jj_consume_token(27);
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void AppliesTo() throws ParseException {
		jj_consume_token(28);
		completions.clear();
		manSyntaxClassExpression();
		jj_consume_token(27);
	}

	static void manSyntaxClassExpression() throws ParseException {
		/* @bgen(jjtree) manSyntaxClassExpression */
		MAEmanSyntaxClassExpression jjtn000 = new MAEmanSyntaxClassExpression(
				JJTMANSYNTAXCLASSEXPRESSION);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			Token t;
			while (true) {
				t = getToken(1);
				if (t.image.equals(">") || t.image.equals("]") || t.kind == EOF) {
					break;
				} else {
					jjtn000.setContent(jjtn000.getContent()
							+ (jjtn000.getContent().equals("") ? "" : " ")
							+ t.image);
					t = getNextToken();
				}
			}
			String content = jjtn000.getContent();
			ManchesterOWLSyntaxEditorParser parser = new ManchesterOWLSyntaxEditorParser(
					dataFactory, content);
			parser.setOWLEntityChecker(owlEntityChecker);
			try {
				parser.parseDescription();
			} catch (ParserException e) {
				if (matcher != null) {
					int lastIndexOfWhiteSpace = content.lastIndexOf(" ");
					String word = lastIndexOfWhiteSpace == -1 ? content
							: content.substring(lastIndexOfWhiteSpace).trim();
					Set<OWLObject> matches = matcher.getMatches(word, e
							.isClassNameExpected(), e
							.isObjectPropertyNameExpected(), e
							.isDataPropertyNameExpected(), e
							.isIndividualNameExpected(), e
							.isDatatypeNameExpected());
					List kwMatches = new ArrayList(matches.size() + 10);
					for (String s : e.getExpectedKeywords()) {
						if (word.matches("(\u005c\u005cs)*")
								|| s.toLowerCase().startsWith(
										word.toLowerCase())) {
							kwMatches.add(s);
						}
					}
					completions.addAll(kwMatches);
					completions.addAll(matches);
				}
				throw new ParseException(e.getMessage());
			}
			String expression = content + "**";
			ManchesterOWLSyntaxEditorParser completerParser = new ManchesterOWLSyntaxEditorParser(
					dataFactory, expression);
			completerParser.setOWLEntityChecker(owlEntityChecker);
			try {
				completerParser.parseDescription();
			} catch (ParserException e) {
				if (matcher != null) {
					int lastIndexOfWhiteSpace = expression.lastIndexOf(" ");
					String word = lastIndexOfWhiteSpace == -1 ? "" : content
							.substring(lastIndexOfWhiteSpace).trim();
					List kwMatches = new ArrayList(10);
					for (String s : e.getExpectedKeywords()) {
						if (word.matches("(\u005c\u005cs)*")
								|| s.toLowerCase().startsWith(
										word.toLowerCase())) {
							kwMatches.add(s);
						}
					}
					completions.addAll(kwMatches);
				}
			}/* @bgen(jjtree) */
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void Binding(Set<String> variables)
			throws ParseException {
		/* @bgen(jjtree) Binding */
		MAEBinding jjtn000 = new MAEBinding(JJTBINDING);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token identifier;
		Token propertyName;
		try {
			identifier = jj_consume_token(IDENTIFIER);
			variables.add(identifier.image);
			jjtn000.setIdentifier(identifier.image);
			jj_consume_token(29);
			PropertyChain();
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void PropertyChain() throws ParseException {
		/* @bgen(jjtree) PropertyChain */
		MAEPropertyChain jjtn000 = new MAEPropertyChain(JJTPROPERTYCHAIN);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		String propertyName;
		Token index;
		try {
			propertyName = PropertyURI();
			jjtn000.setPropertyName(propertyName);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 30:
					jj_consume_token(30);
					PropertyFacet();
					jj_consume_token(31);
					break;
				default:
					jj_la1[6] = jj_gen;
					;
			}
			label_2: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case EXCLAMATION:
						;
						break;
					default:
						jj_la1[7] = jj_gen;
						break label_2;
				}
				jj_consume_token(EXCLAMATION);
				jjtn000.setEnd(false);
				PropertyChain();
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static final public void PropertyFacet() throws ParseException {
		/* @bgen(jjtree) PropertyFacet */
		MAEPropertyFacet jjtn000 = new MAEPropertyFacet(JJTPROPERTYFACET);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			manSyntaxClassExpression();
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	static String PropertyURI() throws ParseException {
		String toReturn = null;
		String uriString = "";
		Token t;
		while (true) {
			t = getToken(1);
			if (t.kind == EXCLAMATION || t.image.startsWith("[")
					|| t.kind == CLOSEDCURLYBRACKET || t.kind == BINDINGEND
					|| t.image.startsWith("{") || t.image.startsWith(">")
					|| t.kind == EOF) {
				break;
			}
			uriString = (uriString + t.image).trim();
			t = getNextToken();
		}
		if (owlEntityChecker != null) {
			OWLDataProperty dataProperty = owlEntityChecker
					.getOWLDataProperty(uriString);
			if (dataProperty != null) {
				toReturn = dataProperty.getURI().toString();
			}
			if (toReturn == null) {
				OWLObjectProperty objectProperty = owlEntityChecker
						.getOWLObjectProperty(uriString);
				if (objectProperty != null) {
					toReturn = objectProperty.getURI().toString();
				}
			}
		}
		if (toReturn == null) {
			if (matcher != null) {
				completions.addAll(matcher.getMatches(uriString, false, true,
						true, false, false));
			}
			throw new ParseException(uriString
					+ " invalid property URI or name");
		}
		if (matcher != null) {
			completions.addAll(matcher.getMatches(uriString, false, true, true,
					false, false));
		}
		return toReturn;
	}

	static final public void Expression(Set<String> variables)
			throws ParseException {
		AdditiveExpression(variables);
	}

	static final public void AdditiveExpression(Set<String> variables)
			throws ParseException {
		Token op = null;
		MAEAdd jjtn001 = new MAEAdd(JJTADD);
		boolean jjtc001 = true;
		jjtree.openNodeScope(jjtn001);
		try {
			MultiplicativeExpression(variables);
			label_3: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case SUM:
						;
						break;
					default:
						jj_la1[8] = jj_gen;
						break label_3;
				}
				op = jj_consume_token(SUM);
				jjtn001.setSum(op == null || op.image.compareTo("+") == 0);
				AdditiveExpression(variables);
			}
		} catch (Throwable jjte001) {
			if (jjtc001) {
				jjtree.clearNodeScope(jjtn001);
				jjtc001 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte001 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte001;
				}
			}
			if (jjte001 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte001;
				}
			}
			{
				if (true)
					throw (Error) jjte001;
			}
		} finally {
			if (jjtc001) {
				jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
			}
		}
	}

	static final public void MultiplicativeExpression(Set<String> variables)
			throws ParseException {
		Token op = null;
		MAEMult jjtn001 = new MAEMult(JJTMULT);
		boolean jjtc001 = true;
		jjtree.openNodeScope(jjtn001);
		try {
			UnaryExpression(variables);
			label_4: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case MULTIPLY:
						;
						break;
					default:
						jj_la1[9] = jj_gen;
						break label_4;
				}
				op = jj_consume_token(MULTIPLY);
				jjtn001.setMultiplication(op == null
						|| op.image.compareTo("*") == 0);
				jjtn001.setPercentage(op != null
						&& op.image.compareTo("%") == 0);
				MultiplicativeExpression(variables);
			}
		} catch (Throwable jjte001) {
			if (jjtc001) {
				jjtree.clearNodeScope(jjtn001);
				jjtc001 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte001 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte001;
				}
			}
			if (jjte001 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte001;
				}
			}
			{
				if (true)
					throw (Error) jjte001;
			}
		} finally {
			if (jjtc001) {
				jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
			}
		}
	}

	static final public void UnaryExpression(Set<String> variables)
			throws ParseException {
		if (jj_2_1(2)) {
			Power(variables);
		} else {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 32:
					jj_consume_token(32);
					Expression(variables);
					jj_consume_token(33);
					break;
				case INTEGER_LITERAL:
				case NUMBER:
				case IDENTIFIER:
					groundTerm(variables);
					break;
				default:
					jj_la1[10] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
			}
		}
	}

	static final public void Power(Set<String> variables) throws ParseException {
		/* @bgen(jjtree) Power */
		MAEPower jjtn000 = new MAEPower(JJTPOWER);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Double base = null;
		Double exp;
		Token baseId = null;
		try {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case INTEGER_LITERAL:
				case NUMBER:
					base = Integer();
					break;
				case IDENTIFIER:
					baseId = jj_consume_token(IDENTIFIER);
					if (!variables.contains(baseId.image)) {
						{
							if (true)
								throw new ParseException("Unbound symbol: "
										+ baseId.image);
						}
					}
					break;
				default:
					jj_la1[11] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
			}
			jj_consume_token(34);
			exp = Integer();
			jjtree.closeNodeScope(jjtn000, true);
			jjtc000 = false;
			if (base != null) {
				jjtn000.setBase(base);
			} else {
				jjtn000.setSymbolic(true);
				jjtn000.setBaseIdentifier(baseId.image);
			}
			jjtn000.setExp(exp);
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}
